--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
+    "react-scroll-motion": "^0.3.0",
     "redux": "^4.1.1",
     "web-vitals": "^1.1.2"
   },
